# tech_arena_2024

./: README.md  pyproject.toml
cloud/: data_preparation.py  main.py
given_info/: evaluation_example.py
given_info/data/: solution_example.json
icandoit/: model.py  not_working_model.py  train.py
icandoit/data/: servers.csv
ppo_try/: my_sol_gpt.py  my_sol_model_gpt_try_one.py  req.txt  use_gpt.py
ppo_try/output/: generated_solution.json  valid_solution_0.json
