[tool.poetry]
name = "tech-arena-2024"
version = "0.1.0"
description = ""
authors = ["Vaskevych  Mykola <vask.mykola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
numpy = "1.26.4"
scipy = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
